--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,9 @@
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Anjelica is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p>Anjelica is an undergraduate student majoring in Computer Engineering within the Computer Science & Engineering department at UC San Diego.</p>
+
+	<p>Outside of studying, her hobbies are watching movies, engaging in digital photography, and spending time with friends and family.</p>
 
 	<h4>Projects</h4>
 	<ol>
