Updated information on the default web page

--- a/static/index.html
+++ b/static/index.html
@@ -18,10 +18,23 @@
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>CSE 170: Introduction to Computer Interaction</li>
+			<ul>
+				<li>Design Thinking</li>
+				<li>Needfinding</li>
+				<li>Prototyping</li>
+				<li>Heuristic Evaluation</li>
+				<li>Skeleton and a Plan</li>
+				<li>Meat on the Bones</li>
+				<li>Ready for Testing</li>
+				<li>Test Your Prototype</li>
+				<li>Results</li>
+				<li>Show & Tell</li>
+			</ul>
+		<li>Grand PrIEEE 2015</li>
+			<ul>
+				<li>Created an autonomous line-following car that was built from scratch using an Arduino Uno microprocessor, which controlled the speed and motion of the car.</li>
+			</ul>
 	</ol>
 </body>
 </html>
