Added additional information onto default page

--- a/static/index.html
+++ b/static/index.html
@@ -4,17 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="portfolioLayout.css">
 </head>
 
 <body>
+	<nav class="navbar">
+		<ul>
+			<li><a class="navbar_main" href="index.html">Home</a></li>
+			<li><a class="navbar_slot" href="aboutme.html">About Me</a></li>
+			<li><a class="navbar_slot" href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+
 	<!-- this is a comment in HTML -->
 	<h1>Anjelica Thang</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Anjelica is an undergraduate student majoring in Computer Engineering within the Computer Science & Engineering department at UC San Diego.</p>
-
-	<p>Outside of studying, her hobbies are watching movies, engaging in digital photography, and spending time with friends and family.</p>
+	<p>Welcome to my portfolio!</p>
 
 	<h4>Projects</h4>
 	<ol>
